test/semant/negative_controls/buggy_progs/undeclared-var.con
concept test
purpose something
state
actions
  a()
  x := 1
principle
